# sansho

./: .env.example  .gitignore  package-lock.json
agentcore/: agentcore.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json
app/hermes/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
app/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
app/web/src/: App.tsx  main.tsx
app/web/src/components/: Chat.tsx  Login.tsx
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/config/: cron-jobs.json
infra/lambdas/: agentcore.ts  chat-authorizer.ts  chat.ts  cron.ts  router.ts
infra/lib/: chat-stack.ts  cron-stack.ts  whatsapp-stack.ts
scripts/: deploy.sh
