[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sansho-hermes"
version = "0.1.0"
description = "Hermes agent runtime for Amazon Bedrock AgentCore"
requires-python = ">=3.11"
# NOTE: real dependencies are installed by the Dockerfile (pip editable install
# of NousResearch/hermes-agent plus the runtime deps below). This file exists so
# the directory is a valid Python project for the AgentCore CLI.
dependencies = [
    "anthropic[bedrock]",
    "bedrock-agentcore",
    "boto3",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
